# routes/transaction.js
@@ -1,0 +1,7 @@
+const express = require('express')
+const router = express.Router()
+const transactionControllers = require('../controllers/transaction.js')
+
+router.post('/transaction', transactionControllers.doTransaction)
+
+module.exports = router
